--- a/src/app/admin-update/admin-update.component.html
+++ b/src/app/admin-update/admin-update.component.html
@@ -1,5 +1,5 @@
 <app-admin-header></app-admin-header>
-<div class="container py-5">
+<div class="container w-25 mt-4 border border-dark border-5px py-4">
     <form [formGroup]="exform">
         <label><h3><strong>Update Retailer</strong></h3></label> <br>
       Retailer Id:<br>
