--- a/src/app/display-all-products/display-all-products.component.html
+++ b/src/app/display-all-products/display-all-products.component.html
@@ -102,7 +102,7 @@
             />
           </div>
           <div class="col-10 my-2 mr-10">
-            <strong>{{ product.pBrand }} {{ product.pName }}</strong> <br />
+            <strong>{{ product.pBrand }} <br>{{ product.pName }}</strong> <br />
             <strong>Rs : {{ product.pPrice }}</strong> <br />
             <button
               class="btn btn-outline-danger my-2"
