--- a/src/app/retailer-profile/retailer-profile.component.html
+++ b/src/app/retailer-profile/retailer-profile.component.html
@@ -33,7 +33,7 @@
                     <div class="card-body">
                       <h5 class="card-title">{{myProduct.pBrand}}</h5>
                       <p class="card-text"><strong>{{myProduct.pName}}</strong> <br>
-                        <strong>{{myProduct.pPrice}}</strong> <br> </p>
+                        <strong>Rs {{myProduct.pPrice}}</strong> <br> </p>
                     </div>
                   </div>
                 
