--- a/src/app/single-product/single-product.component.html
+++ b/src/app/single-product/single-product.component.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="col-md-7">
-      <p class="newarrival text-center">NEW</p>
+      <p class="newarrival text-center"></p>
       <h2>{{ product.pBrand }}</h2>
       <p>{{ product.pName }}</p>
       <span class="fa fa-star checked"></span>
