--- a/src/app/user-login/user-login.component.css
+++ b/src/app/user-login/user-login.component.css
@@ -1,4 +1,4 @@
-.forgot {
+/* .forgot {
     right: 0;
     font-weight: 700;
     font-size: 18px;
@@ -104,4 +104,4 @@ input,textarea{
 div {
     display: block;
    
-}
+} */
