--- a/src/app/admin-login/admin-login.component.css
+++ b/src/app/admin-login/admin-login.component.css
@@ -1,4 +1,4 @@
-.loginrow {
+/* .loginrow {
     margin: 0;
     padding: 0;
     background-color: royalblue;
@@ -46,4 +46,4 @@ input[type="password"] {
 .jumbotron
 {
     background: rgb(116, 15, 15);
-}
+} */
