--- a/src/app/compare-products/compare-products.component.css
+++ b/src/app/compare-products/compare-products.component.css
@@ -1,16 +1,21 @@
 .card {
-    border: none;
-    outline: none;
-    background-color: cadetblue;
-    border-radius: 20px;
-    transition: transform 0.3s;
-    margin-left: 2%;
-    margin-right: 2%;
-    margin-top: 4%;
-    margin-bottom: 4%;
-  }
-  
-  .card:hover {
-    transform: translateY(-15px);
-    transition: transform 0.3s;
-  }
+  border: none;
+  outline: none;
+
+  border-radius: 20px;
+  transition: transform 0.3s;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-top: 4%;
+  margin-bottom: 4%;
+}
+
+.card:hover {
+  transform: translateY(-15px);
+  transition: transform 0.3s;
+}
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+}
