--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="page-footer bg-dark">
     <div class="bg-success">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row py-4 d-flex align-items-center">
           <div class="col-md-12 text-center">
             <a href="#"><i class="fab fa-whatsapp text-white mr-4"></i></a>
