--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,58 +10,59 @@
     </div>
     <div class="col-4 p-3 border-5">
       <div class="form-group">
-        <input
-          type="text"
-          class="form-control"
-          id=""
-          placeholder="Search for products,brand and more "
-          [(ngModel)]="keyword"
-        />
+        <input type="text" class="form-control" id="" placeholder="Search for products,brand and more " [(ngModel)]="keyword"/>
       </div>
     </div>
     <!-- ------------Search Button---- -->
-    <div class="col-1 p-2">
-      <button
-        class="btn btn-outline-dark my-1 my-sm-0"
-        (click)="onProductSearchCicked()">
-        Search <i class="fas fa-search"></i>
-      </button>
+    <div class="col-1 p-2 mt-2">
+      <button class="btn btn-md btn-outline-dark my-1 my-sm-0" (click)="onProductSearchCicked()"> Search <i class="fas fa-search"></i></button>
     </div>
     <!-- ---------------------Login button-------------------- -->
-    <div class="col-2 text-center p-2">
+    <div class="col-5 text-center p-2">
       <div class="btn-group dropright">
-        <button
-          class="btn btn-success btn-lg"
-          (click)="loginUser()"
-          *ngIf="loginOrLogout === 'Login'; else userLoggedIn"
-        >
+        <button class="btn btn-success btn-lg "  (click)="loginUser()" *ngIf="loginOrLogout === 'Login'; else userLoggedIn">
           Login <i class="fas fa-sign-in-alt"></i>
         </button>
         <ng-template #userLoggedIn>
           <button class="btn btn-danger" (click)="logoutUser()">Logout</button>
         </ng-template>
         <!-- --------------Drop Down Section--- -->
-        <button type="button" class="btn btn-success dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-md btn-outline-dark " *ngIf="uId > 0"  [routerLink]="['/user-myorder']">
+         <b> My Orders </b><i class="fas fa-shopping-bag"></i>
+        </button>
+        <button class="btn  btn-md btn-outline-dark" *ngIf="uId > 0" [routerLink]="['/user-wishlist']" >
+          <b> My Wishlist </b><i class="fas fa-heart"></i>
+        </button>
+        <button class="btn  btn-md btn-outline-dark" *ngIf="uId != 0" [routerLink]="['/register-user']" >
+          <b> Sign Up </b><i class="fas fa-user-circle"></i>
+        </button>
+        <button class=" btn  btn-md btn-outline-dark" *ngIf="uId > 0" (click)="showMyCart()" >
+         <b> Cart {{ cQty }} </b> <i class="fas fa-shopping-cart"></i>
+        </button>
+
+
+
+        <!-- <button type="button" class="btn btn-success dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
           <span class="sr-only">Toggle Dropright</span>
         </button>
         <div class="dropdown-menu">
-          <button class="dropdown-item " [routerLink]="['/user-myorder']" *ngIf="uId > 0" >My Orders</button>
-          <button class="dropdown-item " [routerLink]="['/user-myorder']" *ngIf="uId > 0" >My Wishlist</button>
+          <button class="dropdown-item " [routerLink]="['/user-myorder']" *ngIf="uId > 0" ></button>
+          <button class="dropdown-item " [routerLink]="['/user-myorder']" *ngIf="uId > 0" ></button>
         </div>
        
       </div>
-    </div>
+    </div> -->
     <!-- ---------------Sign Up------------------------- -->
-    <div class="col-1 text-center" *ngIf="uId != 0">
+    <!-- <div class="col-1 text-center" *ngIf="uId != 0">
       <button class="btn btn-success"  [routerLink]="['/register-user']" >
-        Sign Up <i class="fas fa-user-circle"></i>
+         
       </button>
-    </div>
+    </div> -->
     <!-- --------------------Cart Button----------------- -->
-    <div class="col-2 text-center p-2">
+    <!-- <div class="col-2 text-center p-2">
       <button class="btn btn-warning btn-lg" (click)="showMyCart()">
-        Cart {{ cQty }} <i class="fas fa-shopping-cart"></i>
+        
       </button>
-    </div>
+    </div> -->
   </div>
 </div>
