--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -38,3 +38,9 @@
     transform: translateY(-15px);
     transition: transform 0.3s;
   }
+
+  .card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+  }
