--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,44 +1,27 @@
 <app-header></app-header>
-<div
-  id="carouselExampleIndicators"
-  class="carousel slide my-4 m-2"
-  data-ride="carousel"
->
+<div id="carouselExampleIndicators"  class="carousel slide my-4 m-2"  data-ride="carousel">
   <ol class="carousel-indicators">
-    <li
-      data-target="#carouselExampleIndicators"
-      data-slide-to="0"
-      class="active"
-    ></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" ></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner">
+    <div class="carousel-item">
+      <img src="../../assests/images/hq mac air 2021.jpg" class="d-block w-100" alt="product2"/>
+    </div>
+    <div class="carousel-item">
+      <img src="../../assests/images/s20 hq.jpg" class="d-block w-100" alt="product3"/>
+    </div>
     <div class="carousel-item active">
-      <img src="../../assests/images/macbook_pro_20_2.jpg" class="d-block w-100" alt="product1" />
-    </div>
-    <div class="carousel-item">
-      <img src="../../assests/images/macbook_mini_1.jpg" class="d-block w-100" alt="product2" />
-    </div>
-    <div class="carousel-item">
-      <img src="../../assests/images/iphone11_2.jpg" class="d-block w-100" alt="product3" />
+      <img src="../../assests/images/mac_cover.jpeg" class="d-block w-100" alt="product1"/>
     </div>
   </div>
-  <a
-    class="carousel-control-prev"
-    href="#carouselExampleIndicators"
-    role="button"
-    data-slide="prev"
-  >
+
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" >
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a
-    class="carousel-control-next"
-    href="#carouselExampleIndicators"
-    role="button"
-    data-slide="next"
-  >
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next" >
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
@@ -56,60 +39,92 @@
     <div class="col-3">
       <div class="card shadow" style="width: 25rem">
         <div class="inner">
-          <img src="../../assests/images/iphone11_2.jpg" class="card-img-top" alt="..." />
+          <img
+            src="../../assests/images/iphone11_2.jpg"
+            class="card-img-top w-200 h-200"
+            alt="Iphone11"
+          />
         </div>
         <div class="card-body text-center text-white">
-          <h5 class="card-title">Laptop</h5>
+          <h5 class="card-title">Iphone 11</h5>
           <p class="card-text">
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">View More</a>
+          <a
+            href="http://localhost:52249/display-single-product/409"
+            class="btn btn-primary"
+            >View More</a
+          >
         </div>
       </div>
     </div>
     <div class="col-3">
       <div class="card shadow" style="width: 25rem">
         <div class="inner">
-          <img src="../../assests/images/iphone10_2.jpg" class="card-img-top" alt="..." />
+          <img
+            src="../../assests/images/iphone7_1.jpg"
+            class="card-img-top w-200 h-200"
+            alt="iphone10"
+          />
         </div>
         <div class="card-body text-center text-white">
-          <h5 class="card-title">lambo</h5>
+          <h5 class="card-title">iphone 7</h5>
           <p class="card-text">
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">View More</a>
+          <a
+            href="http://localhost:52249/display-single-product/407"
+            class="btn btn-primary "
+            >View More</a
+          >
         </div>
       </div>
     </div>
     <div class="col-3">
       <div class="card shadow" style="width: 25rem">
         <div class="inner">
-          <img src="../../assests/images/iphone12_2.jpg" class="card-img-top" alt="..." />
+          <img
+            src="../../assests/images/iphone12_2.jpg"
+            class="card-img-top w-200 h-200"
+            alt="iphone12"
+          />
         </div>
         <div class="card-body text-center text-white">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">iphone12</h5>
           <p class="card-text">
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">View More</a>
+          <a
+            href="http://localhost:52249/display-single-product/401"
+            class="btn btn-primary"
+            >View More</a
+          >
         </div>
       </div>
     </div>
     <div class="col-3">
       <div class="card shadow" style="width: 25rem">
         <div class="inner">
-          <img src="../../assests/images/iphone12_1.jpg" class="card-img-top" alt="..." />
+          <img
+            src="../../assests/images/iphone12_1.jpg"
+            class="card-img-top w-200 h-200"
+            alt="iphone12"
+          />
         </div>
         <div class="card-body text-center text-white">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">iphone12</h5>
           <p class="card-text">
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">View More</a>
+          <a
+            href="http://localhost:52249/display-single-product/401"
+            class="btn btn-primary"
+            >View More</a
+          >
         </div>
       </div>
     </div>
@@ -121,60 +136,92 @@
     <div class="col-3">
       <div class="card shadow" style="width: 25rem">
         <div class="inner">
-          <img src="../../assests/images/iphone11_1.jpg" class="card-img-top" alt="..." />
+          <img
+            src="../../assests/images/iphone11_1.jpg"
+            class="card-img-top"
+            alt="Iphone 11"
+          />
         </div>
         <div class="card-body text-center text-white">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Iphone 10</h5>
           <p class="card-text">
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">View More</a>
+          <a
+            href="http://localhost:52249/display-single-product/409"
+            class="btn btn-primary"
+            >View More</a
+          >
         </div>
       </div>
     </div>
     <div class="col-3">
       <div class="card shadow" style="width: 25rem">
         <div class="inner">
-          <img src="../../assests/images/iphone10_1.jpg" class="card-img-top" alt="..." />
+          <img
+            src="../../assests/images/iphone10_1.jpg"
+            class="card-img-top"
+            alt="Iphone 10"
+          />
         </div>
         <div class="card-body text-center text-white">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Iphone 10</h5>
           <p class="card-text">
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">View More</a>
+          <a
+            href="http://localhost:52249/display-single-product/404"
+            class="btn btn-primary"
+            >View More</a
+          >
         </div>
       </div>
     </div>
     <div class="col-3">
       <div class="card shadow" style="width: 25rem">
         <div class="inner">
-          <img src="../../assests/images/Samsung_S11_1.jpg" class="card-img-top" alt="..." />
+          <img
+            src="../../assests/images/Samsung_S11_1.jpg"
+            class="card-img-top"
+            alt="Samsung_S11"
+          />
         </div>
         <div class="card-body text-center text-white">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Samsung_S11</h5>
           <p class="card-text">
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">View More</a>
+          <a
+            href="http://localhost:52249/display-single-product/403"
+            class="btn btn-primary"
+            >View More</a
+          >
         </div>
       </div>
     </div>
     <div class="col-3">
       <div class="card shadow" style="width: 25rem">
         <div class="inner">
-          <img src="../../assests/images/Samsung_S10_1.jpg" class="card-img-top" alt="..." />
+          <img
+            src="../../assests/images/Samsung_S10_1.jpg"
+            class="card-img-top"
+            alt="Samsung_S10"
+          />
         </div>
         <div class="card-body text-center text-white">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Samsung_S10</h5>
           <p class="card-text">
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">View More</a>
+          <a
+            href="http://localhost:52249/display-single-product/405"
+            class="btn btn-primary"
+            >View More</a
+          >
         </div>
       </div>
     </div>
