--- a/src/app/retailer-login/retailer-login.component.html
+++ b/src/app/retailer-login/retailer-login.component.html
@@ -1,42 +1,77 @@
-<app-retailer-header></app-retailer-header>
 <div class="jumbotron">
   <div class="container">
-      <div class="row">
-          <div class="col-md-6 offset-md-3">
-              <h3>Login Here</h3>
-              <form [formGroup]="registerForm" (ngSubmit)="loginUser()">
-                 
-                
-                  <div class="form-group">
-                      <label>Email</label>
-                      <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" 
-                     
-          [(ngModel)]="email" name="email"
-                      />
-                      <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                          <div *ngIf="f.email.errors.required">Email is required</div>
-                          <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
-                      </div>
-                  </div>
-                  <div class="form-group">
-                      <label>Password</label>
-                      <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
-                      [(ngModel)]="password" name="password"  
-          />
-                      <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                          <div *ngIf="f.password.errors.required">Password is required</div>
-                          <div *ngIf="f.password.errors.minlength">Password must be at least 2 characters</div>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                   
-                <button  class="btn btn-lg btn-primary btn-block" (click)="loginUser()">Login</button> </div>
-                <a (click)="forgotPassword()">Forgot Password?</a>
-              </form> 
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <h3>Login Here</h3>
+        <form [formGroup]="registerForm" (ngSubmit)="loginUser()">
+          <div class="form-group">
+            <label>Email</label>
+            <input
+              type="text"
+              formControlName="email"
+              class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.email.errors }"
+              [(ngModel)]="email"
+              name="email"
+              placeholder="email"
+            />
+            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+              <div *ngIf="f.email.errors.required">Email is required</div>
+              <div *ngIf="f.email.errors.email">
+                Email must be a valid email address
+              </div>
             </div>
-            <div *ngIf="uId$ | async as uId">
-                    {{moveToHomePage(uId)}}
+          </div>
+          <div class="form-group">
+            <label>Password</label>
+            <input
+              type="password"
+              formControlName="password"
+              class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+              [(ngModel)]="password"
+              name="password"
+              placeholder="password"
+            />
+            <div
+              *ngIf="submitted && f.password.errors"
+              class="invalid-feedback"
+            >
+              <div *ngIf="f.password.errors.required">Password is required</div>
+              <div *ngIf="f.password.errors.minlength">
+                Password must be at least 2 characters
+              </div>
             </div>
-        
+          </div>
+
+          <div class="form-group">
+            <button
+              class="btn btn-outline-success btn-sm my-2"
+              tabindex="-1"
+              (click)="forgotPassword()"
+            >
+              Forgot Password
+            </button>
+
+            <button
+              class="btn btn-lg btn-primary btn-block submitButton"
+              type="submit"
+              (click)="loginUser()"
+            >
+              Login
+            </button>
+          </div>
+
+          <div class="new p-4">
+            Not registered ?<a href="Create an account">Create an account.</a>
+          </div>
+        </form>
+      </div>
+
+      <div *ngIf="uId$ | async as uId">
+        {{ moveToHomePage(uId) }}
+      </div>
+    </div>
   </div>
 </div>
+<app-footer></app-footer>
