--- a/src/app/retailer-update-product/retailer-update-product.component.html
+++ b/src/app/retailer-update-product/retailer-update-product.component.html
@@ -6,15 +6,15 @@
                 <h3>EDIT PRODUCT</h3>
                 <form>
                   Prodcut-Price             <input type="text" class="fomr-control" name="t3" [(ngModel)]=product.pPrice /><br/>
-                  Product-Name              <input type="text" class="form-control" name="t1" [(ngModel)]=product.pName /><br />
-                  Product-Category          <input type="text" class="form-control" name="t4" [(ngModel)]=product.pCategory /><br />
-                  Product-Sub-Category      <input type="text" class="form-control" name="t5" [(ngModel)]=product.pSubCategory/><br/>
-                  Product-Description       <input type="text" class="form-control" name="t6" [(ngModel)]=product.pDescription /><br/>
+                  Product-Name              <input type="text" class="form-control" name="t1" disabled [(ngModel)]=product.pName /><br />
+                  Product-Category          <input type="text" class="form-control" name="t4" disabled [(ngModel)]=product.pCategory /><br />
+                  Product-Sub-Category      <input type="text" class="form-control" name="t5" disabled [(ngModel)]=product.pSubCategory/><br/>
+                  Product-Description       <input type="text" class="form-control" name="t6" disabled [(ngModel)]=product.pDescription /><br/>
                   Product-Quantity          <input type="text" class="form-control" name="t7" [(ngModel)]=product.pQty/><br/>
-                  Product-Image-1           <input type="text" class="form-control" name="t8" [(ngModel)]=product.pImage1/><br/>
-                  Product-Image-2           <input type="text" class="form-control" name="t9" [(ngModel)]=product.pImage2/><br/>
+                  Product-Image-1           <input type="text" class="form-control" name="t8" disabled [(ngModel)]=product.pImage1/><br/>
+                  Product-Image-2           <input type="text" class="form-control" name="t9" disabled [(ngModel)]=product.pImage2/><br/>
                    
-                  Prodcut-Brand Name        <input type="text" class="form-control" name="t2" [(ngModel)]=product.pBrand /><br/>
+                  Prodcut-Brand Name        <input type="text" class="form-control" name="t2" disabled [(ngModel)]=product.pBrand /><br/>
             
                   <button type="submit" class="btn btn-success" (click)="onEditProduct()"> Edit Product </button> 
                 </form>
