--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,49 +1,78 @@
-<div class="main"><!--outer most-->
-    <div class="signin">
-        <h2>SignIn</h2>
-    </div>
-    <form [formGroup]="registerForm" (ngSubmit)="loginUser()">
-        
-        <div class="InputFields">
-            <input type="text" formControlName="email" placeholder="Enter email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }"  [(ngModel)]="email" name="email" />
-           
-            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+<div class="jumbotron">
+    <div class="container border border-red">
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <h3>Login Here</h3>
+          <form [formGroup]="registerForm" (ngSubmit)="loginUser()">
+            <div class="form-group">
+              <label>Email</label>
+              <input
+                type="text"
+                formControlName="email"
+                class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.email.errors }"
+                [(ngModel)]="email"
+                name="email"
+                placeholder="email"
+              />
+              <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                 <div *ngIf="f.email.errors.required">Email is required</div>
-                <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+                <div *ngIf="f.email.errors.email">
+                  Email must be a valid email address
+                </div>
+              </div>
             </div>
-            
-        </div>
-        <div class="InputFields">
-            <input type="password" placeholder="Enter password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" [(ngModel)]="password" name="password"  />
-
-            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+            <div class="form-group">
+              <label>Password</label>
+              <input
+                type="password"
+                formControlName="password"
+                class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+                [(ngModel)]="password"
+                name="password"
+                placeholder="password"
+              />
+              <div
+                *ngIf="submitted && f.password.errors"
+                class="invalid-feedback"
+              >
                 <div *ngIf="f.password.errors.required">Password is required</div>
-                <div *ngIf="f.password.errors.minlength">Password must be at least 2 characters</div>
+                <div *ngIf="f.password.errors.minlength">
+                  Password must be at least 2 characters
+                </div>
+              </div>
             </div>
-
-
-            
-           <a class="forgot" type="button" tabindex="-1" (click)="forgotPassword()">
-                <span>Forgot?</span>
-            </a>
-            
+  
+            <div class="form-group">
+              <button
+                class="btn btn-outline-success btn-sm my-2"
+                tabindex="-1"
+                (click)="forgotPassword()"
+              >
+                Forgot Password
+              </button>
+  
+              <button
+                class="btn btn-lg btn-primary btn-block submitButton"
+                type="submit"
+                (click)="loginUser()"
+              >
+                Login
+              </button>
+            </div>
+  
+            <div class="new p-4">
+              Not registered ?<a  (click)="register()">Create an account.</a>
+            </div>
+          </form>
         </div>
-        
-        
-        <div class="submit">
-            <button class="submitButton" type="submit" (click)="loginUser()" >
-            LogIn
-            </button>
+  
+        <div *ngIf="uId$ | async as uId">
+          {{ moveToHomePage(uId) }}
         </div>
-
-        <div class="new">
-            
-            Not registered ?<a href="Create an account">Create an account.</a> 
-                
-        </div>
-            
-    </form>
-    <div *ngIf="uId$ | async as uId">
-        {{moveToHomePage(uId)}}
+      </div>
     </div>
-</div>
+  </div>
+  <app-footer></app-footer>
+    
