--- a/src/app/user-place-order/user-place-order.component.html
+++ b/src/app/user-place-order/user-place-order.component.html
@@ -2,17 +2,30 @@
 <!-- <button style="background-color: darkred;width: 100px;height: 45px;border-radius: 10px;margin-left: 1100px;" (click)="logOut()"><h2>LOGOUT</h2></button> -->
 
 <div class="container py-5">
-    <table border="2px">
-        <tr *ngFor =" let cart of userCart">
-            <td><img src="{{'../' + cart.pImage1}}" style="width:128px;height:128px;"></td>
-            <td>{{cart.pName}}</td>
-            <td>{{cart.pBrand}}</td>
-            <td>{{cart.pPrice}}</td>
-            <br>
-            <td>{{getTotalValue(cart.pPrice,cart.qty)}}</td>
-        </tr>
-    </table>
-    <input type="text" placeholder="Enter Payment Type" id="payType" [(ngModel)]="payType"> &nbsp;
+    
+
+    <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Image</th>
+            <th scope="col">Product Name</th>
+            <th scope="col">Brand</th>
+            <th scope="col">Cost</th>
+            <th scope="col">Total Cost</th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor =" let cart of userCart">
+                <td><img src="{{'../' + cart.pImage1}}" style="width:128px;height:128px;"></td>
+                <td>{{cart.pName}}</td>
+                <td>{{cart.pBrand}}</td>
+                <td>{{cart.pPrice}}</td>
+                <td>{{getTotalValue(cart.pPrice,cart.qty)}}</td>
+            </tr>
+        </tbody>
+      </table>
+    
+    <input type="text" placeholder="Enter Payment Type" disabled value="COD" id="payType" > &nbsp;
     <button class="btn btn-warning my-2" (click)="placeOrder()">Buy Products</button> &nbsp;
     <strong>Your Total Cart Value is {{totalPrice}}</strong>
 </div>
